--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 *.class
 *.log
+
+# sbt specific
+.cache
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.idea
+
+# local temp
+t/
+lib/
+spark-warehouse/
